Spacing fixed.. login ready

--- a/TheFriendShip/TheFriendShip/ClientApp/src/app/nav/nav.component.css
+++ b/TheFriendShip/TheFriendShip/ClientApp/src/app/nav/nav.component.css
@@ -1,6 +1,4 @@
-.toolbar {
-  overflow: hidden;
-}
+
 
 .fill-remaining-space {
   /* This fills the remaining space, by using flexbox. 
@@ -8,9 +6,14 @@
   flex: 1 1 auto;
 }
 
-.usrpwd{
+.usrpwd {
   font-size: 12px;
-  
+  padding-right: 15px;
+}
+.example-full-width {
+  width: 100%;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .mat-button, .mat-icon-button, .mat-stroked-button {
@@ -18,37 +21,5 @@
   outline-color: white;
 }
 
-.nav-link {
-  text-decoration: none;
-  color: white;
-}
 
-.ham-container {
-  display: inline-block;
-  cursor: pointer;
-}
 
-.menubar1, .menubar2, .menubar3 {
-  width: 5px;
-  height: 5px;
-  background-color: #333;
-  margin: 6px 0;
-  transition: 0.4s;
-}
-
-/* Rotate first bar */
-.change .menubar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-  transform: rotate(-45deg) translate(-9px, 6px);
-}
-
-/* Fade out the second bar */
-.change .menubar2 {
-  opacity: 0;
-}
-
-/* Rotate last bar */
-.change .menubar3 {
-  -webkit-transform: rotate(45deg) translate(-8px, -8px);
-  transform: rotate(45deg) translate(-8px, -8px);
-}
